[package]
name = "spider"
version = "0.1.0"
authors = ["Rayan Ivaturi <irayan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
reqwest = "0.9.19"
select = "0.4.3"
serde_any = "0.5.0"

[[bin]]
name = "spider"
path = "src/main.rs"