[package]
name = "spider"
version = "1.2.0"
authors = ["Rayan Ivaturi <irayan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.20"
actix-web = "1.0"

select = "0.4.3"
serde_any = "0.5.0"

addr = "0.2.0"
dns-lookup = "1.0.1"

regex = "1.2.1"

log = "0.4.0"
env_logger = "0.6.2"

[[bin]]
name = "spider"
path = "src/main.rs"